--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^7.17.1",
     "v-viewer": "^1.5.1",
     "vue": "^2.6.11",
+    "vuedraggable": "^2.24.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
